Códigos para sugestão de múltiplos jogos e dezenas

--- a/templates/lottery_suggestion.html
+++ b/templates/lottery_suggestion.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Lottery Number Suggestion</h1>
+    <a href="/multiple_lottery_suggestions"><button>Multiple Lottery Suggestion</button></a>
     <form method="POST" action="/lottery_suggestion">
         <input type="submit" value="Generate Suggestion">
     </form>
