--- a/static/styles.css
+++ b/static/styles.css
@@ -22,10 +22,11 @@ form {
     margin-bottom: 20px;
 }
 
-input[type="submit"] {
+input[type="submit"], button {
     background-color: #007bff;
     color: #fff;
     padding: 10px 20px;
+    margin-bottom: 20px;
     font-size: 16px;
     border: none;
     border-radius: 4px;
